--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,14 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="description" content="Приложение для знакомств Couply" />
+    <meta
+      name="viewport"
+      content="width=device-width, 
+               initial-scale=1.0, 
+               maximum-scale=1.0, 
+               user-scalable=no,
+               shrink-to-fit=no"
+    />
     <link rel="manifest" href="/manifest.json" />
     <link rel="apple-touch-icon" href="/icon512_rounded.png" />
     <title>Vite + React + TS</title>
