[COUPLY-72] edit profile

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
     />
     <link rel="manifest" href="/manifest.json" />
     <link rel="apple-touch-icon" href="/pv3.jpg" />
-    <title>Vite + React + TS</title>
+    <title>Couply</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
