--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,6 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://yastatic.net/s3/passport-sdk/autofill/v1/sdk-suggest-with-polyfills-latest.js"></script>
   </head>
   <body>
     <div id="root"></div>
