--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0, user-scalable=no, orientation=portrait" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0, user-scalable=no, orientation=portrait"
+    />
     <meta name="theme-color" content="#3b5eda" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -24,10 +27,9 @@
       // Блокировка ориентации экрана для мобильных устройств
       function lockScreenOrientation() {
         if (window.screen && window.screen.orientation && window.screen.orientation.lock) {
-          window.screen.orientation.lock('portrait')
-            .catch(function(error) {
-              console.log('Ошибка при блокировке ориентации:', error);
-            });
+          window.screen.orientation.lock('portrait').catch(function (error) {
+            console.log('Ошибка при блокировке ориентации:', error);
+          });
         }
       }
 
