--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
     <meta name="screen-orientation" content="portrait" />
     <meta name="orientation" content="portrait" />
     <link rel="manifest" href="/manifest.json" />
-    <link rel="apple-touch-icon" href="/pv3.jpg" />
+    <link rel="apple-touch-icon" href="/LOGO.jpg" />
     <title>Couply</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
